# InteractiveWeatherForecast

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  weather_app.py
assets/: main.css
